--- a/css/home.css
+++ b/css/home.css
@@ -25,6 +25,9 @@
     font-weight: 300;
 }
 
+/*
+Product list style
+*/
 .product{
     position: relative;
     overflow: hidden;
@@ -39,6 +42,9 @@
     text-transform: capitalize;
 }
 
+/*
+* Display style: flex
+*/
 .product-container{
     padding: 0 10vw;
     display: flex;
@@ -166,4 +172,40 @@
 
 .pre-btn:hover img, .nxt-btn:hover img{
     opacity: 1;
+}
+
+/*
+* Display style: grid
+*/
+.collection-container {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+}
+
+.collection {
+    position: relative;
+}
+
+.collection:nth-child(3) {
+    grid-column: span 2;
+    margin-bottom: 10px;
+}
+
+.collection img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.collection p {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    text-transform: capitalize;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    color: #fff;
+    font-size: 50px;
 }
